# sisu-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md
bls-circom/: .gitignore  gen_tau.sh  install.sh  jest.config.ts  package-lock.json  package.json  tsconfig.json
bls-circom/circomlib/circuits/: comparators.circom  poseidon_constants.circom
bls-circom/circuit/: bigint.circom  bigint_func.circom  bls12_381_func.circom  bls12_381_hash_to_G2.circom  bls_signature.circom  constants.circom  curve.circom  curve_fp2.circom  field_elements_func.circom  final_exp.circom  fp.circom  fp12.circom  fp12_func.circom  fp2.circom  hash_to_field.circom  pairing.circom  signature.circom
bls-circom/circuit/sisu/: dense_mle.circom  fiat_shamir_hash.circom  fr_bn254.circom  merkle_tree.circom  mimc.circom  mle.circom  num_func.circom  sparse_mle.circom
bls-circom/circuit/sisu/fri/: domain.circom  fold.circom  fri.circom  utils.circom
bls-circom/circuit/sisu/general_gkr/: general_gkr.circom  mle.circom  utils.circom
bls-circom/circuit/sisu/gkr/: custom_mle.circom  gkr.circom  mle.circom  utils.circom
bls-circom/circuit/sisu/sumcheck/: quadratic_poly.circom  sumcheck.circom  utils.circom
bls-circom/circuit/sisu/vpd/: domain.circom  utils.circom  vpd.circom
bls-circom/circuit/zkbridge/: eth2_merkle_path.circom
bls-circom/test/: run_test.sh  run_test_release.sh  test_utils.ts
bls-circom/test/bigint/: test_add.circom  test_add.json  test_mul.circom  test_mul.json
bls-circom/test/bls_signature/: run.sh  test_bls_signature.circom  test_hash_to_field.circom  test_hash_to_field.json  test_miller_loop.circom  test_miller_loop.json  test_signature.circom
bls-circom/test/fiat_shamir/: test_fiat_shamir.circom  test_fiat_shamir.json
bls-circom/test/fp/: test_fp12_multiply.circom  test_fp12_multiply.json  test_fp2_multiply.circom  test_fp2_multiply.json  test_fp_multiply.circom  test_fp_multiply.json
bls-circom/test/fri/: fri.test.ts  test_generated.json
bls-circom/test/general_gkr/: general_gkr.test.ts
bls-circom/test/gkr/: dense_mle.test.ts.ignore  gkr.test.ts  sparse_mle.test.ts.ignore  test_dense_mle.circom  test_dense_mle.json  test_dense_mle_single_update.circom  test_dense_mle_single_update.json  test_sparse_mle.circom
bls-circom/test/goldilocks/: goldilocks_int.test.ts  quadratic_poly.test.ts
bls-circom/test/merkle_tree/: merkle_tree.test.ts  test_merkle_tree.circom  test_merkle_tree.json  test_multi_merkle_tree.circom  test_multi_merkle_tree.json
bls-circom/test/mimc/: mimc.test.ts
bls-circom/test/sumcheck/: run.sh  sumcheck.test.ts
bls-circom/test/vpd/: vpd.test.ts
circom-compat/: Cargo.toml
circom-compat/benches/: groth16.rs
circom-compat/tests/: groth16.rs  solidity.rs
circuitlib/: Cargo.toml
circuitlib/src/: constant.rs  layer.rs  lib.rs
groth16/: Cargo.toml
groth16/src/: builder.rs  distributed.rs  lib.rs  msm.rs  wrapper.rs
pubkey-aggregation/: Cargo.toml
pubkey-aggregation/src/: circuit_builder.rs  circuit_layer.rs  circuit_util.rs  constant.rs  conversion.rs  input_calculator.rs  lib.rs  op_add.rs  op_add_input_num.rs  op_assemble_word.rs  op_assemble_word2.rs  op_diff.rs  op_eq.rs  op_lt.rs  op_mul.rs  test_util.rs
sha256-circuit/: Cargo.toml
sha256-circuit/fixtures/: group1.txt  group2.txt  group3.txt
sha256-circuit/src/: connection_circuit.rs  constants.rs  layer.rs  layer1.rs  layer2.rs  layer3.rs  layer_input.rs  lib.rs  sha_calculation.rs  test_util.rs
sisu/: .gitignore  Cargo.toml
sisu/src/: boolean_hypercube.rs  channel.rs  circuit_evaluation.rs  distributed_sisu.rs  fiat_shamir.rs  fri.rs  general_gkr.rs  general_gkr_sumcheck.rs  gkr.rs  gkr_sumcheck.rs  hash.rs  icicle_converter.rs  lib.rs  mempool.rs  mimc_k.rs  multi_fri.rs  multi_vpd.rs  polynomial.rs  rng.rs  sisu.rs  sisu_engine.rs  sisu_merkle_tree.rs  standalone_fri.rs  standalone_vpd.rs  sumcheck.rs  switch.rs  synthetic_gkr.rs  vpd.rs  vpd_custom_mle.rs
sisu/src/cuda_compat/: circuit.rs  fft.rs  mod.rs  slice.rs
sisulib/: Cargo.toml
sisulib/src/: common.rs  domain.rs  domain_custom_mle.rs  field.rs  lib.rs
sisulib/src/circuit/: circuit.rs  evaluations.rs  gate.rs  layer.rs  mod.rs
sisulib/src/circuit/general_circuit/: circuit.rs  examples.rs  gate.rs  layer.rs  mod.rs
sisulib/src/codegen/: generator.rs
sisulib/src/mle/: custom.rs  dense.rs  mod.rs  sparse.rs
src/: main.rs
