[package]
name = "pubkey-aggregation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
sisulib = { path = "../sisulib" }
circuitlib = { path = "../circuitlib" }
num-bigint = "0.4.4"
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }

[dev-dependencies]
rand = "0.8.5"
