[package]
name = "sha256-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
sisulib = { path = "../sisulib" }

[dev-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
sha2 = "0.10.6"
