[package]
name = "sisulib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ARK
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.1", default-features = false }
ark-poly = { version = "0.4.1", default-features = false }
ark-serialize = { version = "0.4.1" }
ark-bn254 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [
    "curve",
] }

# OTHERS
thiserror = "^1.0.31"
